Java 11 ready