@@ -1,8 +1,8 @@
 package whatsnew.httpclient;
 
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 import java.net.URI;
 
@@ -10,7 +10,7 @@ import java.net.URI;
 public class SimpleHttpClientExample {
 
     public static void main(String... args) throws Exception {
-       // Create and use HttpClient to synchronously call https://www.ns.nl
+       // Create and use HttpClient to synchronously call https://www.google.com
     }
 
 }
