@@ -1,8 +1,8 @@
 package whatsnew.httpclient;
 
-import jdk.incubator.http.HttpClient;
-import jdk.incubator.http.HttpRequest;
-import jdk.incubator.http.HttpResponse;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 import java.net.URI;
 
@@ -13,12 +13,12 @@ public class SimpleHttpClientExample {
         var client = HttpClient.newHttpClient();
 
         var request =
-                HttpRequest.newBuilder(URI.create("https://www.ns.nl"))
+                HttpRequest.newBuilder(URI.create("https://www.google.com"))
                 .GET()
                 .build();
 
         HttpResponse<String> response =
-          client.send(request, HttpResponse.BodyHandler.asString());
+          client.send(request, HttpResponse.BodyHandlers.ofString());
 
         if(response.statusCode() == 200)
             System.out.println(response.headers().map());
